Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
reactos-bootcd-0.4.15-dev-6658-g88808ba-x86-gcc-lin-dbg
- Open Regedit
- Select a key
- File > Export
- Select an incorrect location (eg : My Network Places)
- Fails and error message is shown
then regedit fails, which is not expected (does not close if export succeeds)
Same situation when exporting from "LiveCD"'s regedit to the desktop :
Shows "Information" icon, while it's an "Error", due to https://git.reactos.org/?p=reactos.git;a=blob;f=base/applications/regedit/regedit.c#l42
Regedit closed while it should not

Attachments
Issue Links
- blocks
-
CORE-18876 regedit: Refactor and improve
-
- Untriaged
-